--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>6 cities</title>
-  <link rel="stylesheet" href="css/main.css">
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>6 cities</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-<body class="page page--gray page--main">
-  <div id="root"></div>
-</body>
+  <body class="page page--gray page--main">
+    <div id="root"></div>
+  </body>
+
+  <script src="bundle.js"></script>
 </html>
