--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
 
+  <style>
+    .cities__place-card:hover {
+      opacity: 0.6;
+    }
+  </style>
+
   <body class="page page--gray page--main">
     <div id="root"></div>
   </body>
